# Game_Of_Life

./: CMakeLists.txt  README.md
gens/: gen0.txt  gen1.txt  gen2.txt
include/: canvas.h  life.h
src/: driver_life.cpp
